[package]
name = "bevy_physx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 
[dependencies]
#bevy
bevy = { git = "https://github.com/bevyengine/bevy" }

#physx
physx = "0.17.0"
physx-sys = "0.10.0"

#utils
slotmap = "1.0"


# [profile.dev.package.physx-sys]
# debug = false

[profile.release.package.physx-sys]
debug = false