[package]
name = "bevy_mod_physx"
description = "Bevy plugin for PhysX"
repository = "https://github.com/MasterOfMarkets/bevy_mod_physx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 
[dependencies]
#bevy
bevy =  "0.10.0"

#physx
physx = "0.18.0"
physx-sys = "0.11.0"

#utils
slotmap = "1.0.6"


# [profile.dev.package.physx-sys]
# debug = false

[profile.release.package.physx-sys]
debug = false